--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="viewState"
+            type="cz.lamorak.fleky.view.MemoriesViewState" />
     </data>
 
     <android.support.design.widget.CoordinatorLayout
@@ -20,11 +22,39 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/memories_recycler"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize" />
+            android:layout_marginTop="?attr/actionBarSize"
+            app:isRefreshing="@{viewState.loading}">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/memories_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:memories="@{viewState.memories}"
+                android:visibility="@{viewState.hasMemories()}" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <TextView
+            android:id="@+id/empty_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="36dp"
+            android:text="@string/memories_empty"
+            android:visibility="@{viewState.hasEmptyMemories()}" />
+
+        <TextView
+            android:id="@+id/error_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:padding="36dp"
+            android:text="@{viewState.errorMessage()}"
+            android:visibility="@{viewState.hasError()}" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/button_add_new"
