--- a/app/src/main/res/layout/item_memory.xml
+++ b/app/src/main/res/layout/item_memory.xml
@@ -19,7 +19,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerVertical="true"
-            app:imageUrl="@{memory.thumbnail}"
+            app:imageUrl="@{memory.photo}"
             tools:background="#ccc"/>
 
         <TextView
